lambda-appsync-proc/tests/fail/invalid_type_override.stderr
error: No type or input named `InvalidType`
 --> tests/fail/invalid_type_override.rs:7:27
  |
7 |     field_type_override = InvalidType.id: String,
  |                           ^^^^^^^^^^^
